memory session for anonymous users and game options ui
